--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 streamlit
 pandas
 plotly
+PyYAML
+streamlit-authenticator
+streamlit-gsheets
+opencv-python-headless
+reportlab
+qrcode
+st-gspread
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
