--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ pandas
 plotly
 PyYAML
 streamlit-authenticator
-streamlit-gsheets
+st-gsheets-connection
 opencv-python-headless
 reportlab
 qrcode
-st-gspread
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
+openpyxl
