--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit
 pandas
 plotly
 PyYAML
-streamlit-authenticator
+streamlit-authenticator==0.2.3
 st-gsheets-connection
 opencv-python-headless
 reportlab
